--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -24,11 +24,11 @@
       </picture>
     </a>
     <nav class="nav d-none d-lg-flex align-center justify-between gap-4 color-second w-100">
-      <a class="link text text--uppercase text-14 bold-5 w-max" href="index.html">Front-page</a>
-      <a class="link text text--uppercase text-14 bold-5 w-max" href="primary.html">Primary-page</a>
-      <a class="link text text--uppercase text-14 bold-5 w-max" href="second.html">Second-page</a>
+      <a class="link text-uppercase text-14 bold-5 w-max" href="index.html">Front-page</a>
+      <a class="link text-uppercase text-14 bold-5 w-max" href="primary.html">Primary-page</a>
+      <a class="link text-uppercase text-14 bold-5 w-max" href="second.html">Second-page</a>
       <div class="nav__accordion relative" data-accordion="hidden" data-accordion-close="scroll">
-        <div class="flex align-center text text--uppercase text-14 bold-5 w-max" data-accordion-toggle>
+        <div class="flex align-center text-uppercase text-14 bold-5 w-max" data-accordion-toggle>
           Navigation
           <span class="nav__arrow flex align-center justify-center text-12 ml-2 linear duration-3">
             <svg class="icon">
@@ -117,7 +117,7 @@
         <% for (var i = 1; i < 9; i++) { %>
           <li>
             <a class="smart-menu__item flex align-center justify-center bg-white radius-2 shadow-box py-3 px-6" href="javascript: ;">
-              <span class="text text--center text--dotted text-16 bold-6">Smart-menu item <%= i %></span>
+              <span class="text-center text-dotted text-16 bold-6">Smart-menu item <%= i %></span>
             </a>
           </li>
         <% } %>
@@ -150,8 +150,8 @@
 
   <!-- Переключатель темы -->
 
-  <div class="theme d-none d-lg-flex align-center justify-center fixed zi-5 bg-white border radius-4 shadow-box p-3">
-    <span class="text-14 bold-4 mr-2">Темная тема</span>
+  <div class="theme d-none d-lg-flex align-center justify-center fixed zi-5 bg-white color-gray border radius-4 shadow-box p-3">
+    <span class="color-black text-14 bold-4 mr-2">Темная тема</span>
     <input class="switch switch--toggle" data-theme="toggle" type="checkbox">
   </div>
 
