--- a/src/includes/heading.html
+++ b/src/includes/heading.html
@@ -6,7 +6,7 @@
         <a class="link" href="index.html">Main</a>>
         <span class="fade-60 pointer-none"><%= data.title %></span>
       </div>
-      <h1 class="font-alt text text--center text-40 text-md-50 bold-7 lh-4 shadow-text mb-5 mb-md-10 anim anim--up" data-movement="blend" data-anim="hidden"><%= data.title %></h1>
-      <a class="heading__btn btn btn--primary btn--lg btn--fill btn--glow w-100 anim anim--up" data-waved data-scroll="top" data-anim="hidden" href="#content">Show more</a>
+      <h1 class="font-alt text-center text-40 text-md-50 bold-7 lh-4 shadow-text mb-5 mb-md-10 anim anim--up" data-movement="blend" data-anim="hidden"><%= data.title %></h1>
+      <a class="heading__btn btn btn--primary btn--lg btn--fill btn--glow w-100 anim anim--up" data-waved="light" data-scroll="top" data-anim="hidden" href="#content">Show more</a>
     </div>
   </main>
