--- a/src/includes/player.html
+++ b/src/includes/player.html
@@ -18,7 +18,7 @@
   <section class="player container container--sm bg-grey" data-player id="player">
     <dialog id="playlist">
       <div class="dialog dialog--sm radius-3 p-5 p-md-10">
-        <div class="text text--center text-32 bold-7 mb-6">Playlist</div>
+        <div class="text-center text-32 bold-7 mb-6">Playlist</div>
         <div class="flex flex-column gap-4">
           <% for (var i = 0; i < compositions.length; i++) { %>
             <div class="flex align-center gap-2">
@@ -52,8 +52,8 @@
           <img class="image" data-player-poster src="" loading="lazy" alt="">
         </picture>
       </div>
-      <div class="font-alt text text--center text-26 text-md-32 bold-7 lh-4" data-player-artist></div>
-      <div class="text text--center text-16 text-md-22 bold-5 mb-6" data-player-song></div>
+      <div class="font-alt text-center text-26 text-md-32 bold-7 lh-4" data-player-artist></div>
+      <div class="text-center text-16 text-md-22 bold-5 mb-6" data-player-song></div>
       <audio class="d-none -player-audio-" data-player-audio src=""></audio>
       <div class="bg-grey radius-5 w-100 py-5 px-3 px-md-5">
         <div class="relative bg-gray radius-7 pointer w-100 mb-3 pb-1" data-player-progress>
