--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -2,14 +2,14 @@
 
   <div class="limit flex align-center justify-center bg-block fixed zi-10 fade-0 hidden pointer-all w-100 h-100 linear duration-8" data-limit>
     <div class="limit__content flex flex-column align-center justify-center bg-white shadow-box radius-4 w-100 p-10">
-      <h4 class="text text--center text-18 text-md-20 bold-6 border-bottom w-100 mb-3 pb-3">Вам уже исполнилось 18 лет?</h4>
-      <p class="text text--center text-14 text-md-16 bold-4 lh-5 border-bottom w-100 mb-5 pb-3 mb-md-10">
+      <h4 class="text-center text-18 text-md-20 bold-6 border-bottom w-100 mb-3 pb-3">Вам уже исполнилось 18 лет?</h4>
+      <p class="text-center text-14 text-md-16 bold-4 lh-5 border-bottom w-100 mb-5 pb-3 mb-md-10">
         Содержание сайта предназначено для просмотра исключительно лицам достигшим совершеннолетия <br>
         Если вам нет 18 лет, немедленно покиньте сайт!
       </p>
       <div class="flex flex-wrap align-center justify-center gap-5 w-100">
-        <button class="btn btn--second btn--lg btn--fill px-10" data-limit-positive data-waved>Да</button>
-        <button class="btn btn--primary btn--lg btn--fill px-10" data-limit-negative data-waved>Нет</button>
+        <button class="btn btn--second btn--lg btn--fill px-10" data-limit-positive data-waved="dark">Да</button>
+        <button class="btn btn--primary btn--lg btn--fill px-10" data-limit-negative data-waved="light">Нет</button>
       </div>
     </div>
   </div>
@@ -36,12 +36,12 @@
         <img class="w-100" src="img/pictures/logo.png" alt="">
       </picture>
     </a>
-    <address class="color-white text text--center text-16 lh-3">
+    <address class="color-white text-center text-16 lh-3">
       ​Рождественская набережная, <br> 45/1​5 офис; 3 этаж
     </address>
     <span class="link text-18 w-max" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-politics.html">Privacy policy</span>
     <span class="text-18">
-      Разработка: <a class="text text--underline w-max" href="https://stdkit.ru/" target="_blank">Студия КИТ</a>
+      Разработка: <a class="text-underline w-max" href="https://stdkit.ru/" target="_blank">Студия КИТ</a>
     </span>
   </footer>
 
