--- a/src/scss/ui-kit/_border.scss
+++ b/src/scss/ui-kit/_border.scss
@@ -1,21 +1,21 @@
 // Рамка
 .border {
-  border: 1px solid var(--color-gray);
+  border: 1px solid currentColor;
 
   &-top {
-    border-top: 1px solid var(--color-gray);
+    border-top: 1px solid currentColor;
   }
 
   &-left {
-    border-left: 1px solid var(--color-gray);
+    border-left: 1px solid currentColor;
   }
 
   &-right {
-    border-right: 1px solid var(--color-gray);
+    border-right: 1px solid currentColor;
   }
 
   &-bottom {
-    border-bottom: 1px solid var(--color-gray);
+    border-bottom: 1px solid currentColor;
   }
 
   &-none {
