--- a/src/scss/ui-kit/_button.scss
+++ b/src/scss/ui-kit/_button.scss
@@ -61,7 +61,22 @@
   }
 
   &:focus {
-    box-shadow: 0 0 0 4px var(--btn-focus);
+    box-shadow      : 0 0 0 4px var(--btn-focus);
+    background-color: var(--btn-fade);
+  }
+
+  &--fill:focus {
+    background-color: var(--btn-dark);
+  }
+
+  &--fade:focus {
+    color           : var(--btn-accent);
+    background-color: var(--btn-light);
+  }
+
+  &--light:focus {
+    background-color: var(--btn-accent);
+    border-color    : var(--btn-color);
   }
 
   &:active {
