--- a/src/scss/ui-kit/_card.scss
+++ b/src/scss/ui-kit/_card.scss
@@ -6,7 +6,7 @@
   background-color: var(--color-white);
   box-shadow      : 8px 8px 4px var(--color-black-20);
   border-radius   : 16px;
-  transition      : box-shadow 0.2s ease, transform 0.1s ease;
+  transition      : box-shadow 0.2s ease, transform 0.2s ease;
   overflow        : hidden;
 
   &-content {
@@ -15,7 +15,7 @@
     flex-grow     : 1;
   }
 
-  &:active {
+  &--active:active {
     transform: translateY(4px);
   }
 
