--- a/src/scss/ui-kit/_text.scss
+++ b/src/scss/ui-kit/_text.scss
@@ -1,64 +1,59 @@
 // Текст
 .text {
-  font: {
-    weight: normal;
-    style : normal;
-  }
-
-  &--italic {
+  &-italic {
     font-style: italic;
   }
 
-  &--uppercase {
+  &-uppercase {
     text-transform: uppercase;
   }
 
-  &--left {
+  &-left {
     text-align: left;
   }
 
-  &--center {
+  &-center {
     text-align: center;
   }
 
-  &--right {
+  &-right {
     text-align: right;
   }
 
-  &--justify {
+  &-justify {
     text-align: justify;
   }
 
-  &--underline {
+  &-underline {
     text: {
       decoration      : underline;
       underline-offset: 4px;
     }
   }
 
-  &--dotted {
+  &-dotted {
     text: {
       decoration      : underline dotted;
       underline-offset: 4px;
     }
   }
 
-  &--dashed {
+  &-dashed {
     text: {
       decoration      : underline dashed;
       underline-offset: 4px;
     }
   }
 
-  &--line {
+  &-line {
     text-decoration: line-through;
   }
 
-  &--clone {
+  &-clone {
     box-decoration-break: clone;
   }
 
-  &--hidden {
+  &-hidden {
     white-space  : nowrap;
     text-overflow: ellipsis;
     overflow     : hidden;
