--- a/src/scss/ui-kit/_waved.scss
+++ b/src/scss/ui-kit/_waved.scss
@@ -1,4 +1,12 @@
 // Волна
+[data-waved="light"] .waved {
+  --waved-color: var(--color-white-40);
+}
+
+[data-waved="dark"] .waved {
+  --waved-color: var(--color-black-40);
+}
+
 .waved {
   position      : absolute;
   inset         : 0;
@@ -11,7 +19,7 @@
     display         : block;
     position        : absolute;
     border-radius   : 50%;
-    background-color: var(--color-white-40);
+    background-color: var(--waved-color);
     width           : 40px;
     height          : 40px;
     transform       : translate(-50%, -50%);
