--- a/src/scss/ui-kit/_variables.scss
+++ b/src/scss/ui-kit/_variables.scss
@@ -45,7 +45,6 @@ $xl: 1280.98px;
   --lg : #{calc($lg - 54.98px)};
   --xl : #{calc($xl - 160.98px)};
 
-  --spacing : 4px;
   --size-lg : 45px;
-  --size-md : 36px;
+  --size-sm : 36px;
 }
