--- a/src/scss/ui-kit/_gap.scss
+++ b/src/scss/ui-kit/_gap.scss
@@ -3,8 +3,7 @@
   @include getMedia {
     @for $i from 0 through 10 {
       &-#{$i} {
-        gap     : #{calc(var(--spacing) * $i)};
-        grid-gap: #{calc(var(--spacing) * $i)};
+        gap : #{calc(4 * $i) + px};
       }
     }
   }
