--- a/src/scss/ui-kit/_position.scss
+++ b/src/scss/ui-kit/_position.scss
@@ -23,7 +23,7 @@
 .zi {
   @for $i from 0 through 10 {
     &-#{$i} {
-      z-index: #{calc(100 * $i)};
+      z-index: #{calc($i * 100)};
     }
   }
 }
