--- a/src/scss/ui-kit/_scrollbar.scss
+++ b/src/scss/ui-kit/_scrollbar.scss
@@ -2,7 +2,7 @@
 * {
   scrollbar: {
     width: thin;
-    color: var(--color-primary) var(--color-black-dark);
+    color: var(--color-primary) var(--color-grey);
   }
 
   &::-webkit-scrollbar {
@@ -10,7 +10,7 @@
       width: 16px;
 
       &-track {
-        background-color: var(--color-black-dark);
+        background-color: var(--color-grey);
 
         &-piece {
           margin-block: 8px;
@@ -23,7 +23,7 @@
         border: {
           width : 4px;
           style : solid;
-          color : var(--color-black-dark);
+          color : var(--color-grey);
           radius: 8px;
         }
 
@@ -34,7 +34,7 @@
       }
 
       &-corner {
-        background-color: var(--color-black-dark);
+        background-color: var(--color-grey);
       }
 
       &-button {
@@ -42,15 +42,15 @@
 
         &:vertical {
           &:decrement:start {
-            background-image: linear-gradient(120deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(240deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(0deg, var(--color-black-dark) 35%, var(--color-none) 41%);
+            background-image: linear-gradient(120deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(240deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(0deg, var(--color-grey) 35%, var(--color-none) 41%);
           }
 
           &:increment:end {
-            background-image: linear-gradient(300deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(60deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(180deg, var(--color-black-dark) 35%, var(--color-none) 41%);
+            background-image: linear-gradient(300deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(60deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(180deg, var(--color-grey) 35%, var(--color-none) 41%);
           }
 
           &:increment:start,
@@ -61,15 +61,15 @@
 
         &:horizontal {
           &:decrement:start {
-            background-image: linear-gradient(30deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(150deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(-90deg, var(--color-black-dark) 35%, var(--color-none) 41%);
+            background-image: linear-gradient(30deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(150deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(-90deg, var(--color-grey) 35%, var(--color-none) 41%);
           }
 
           &:increment:end {
-            background-image: linear-gradient(210deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(330deg, var(--color-black-dark) 35%, var(--color-none) 41%),
-              linear-gradient(90deg, var(--color-black-dark) 35%, var(--color-none) 41%);
+            background-image: linear-gradient(210deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(330deg, var(--color-grey) 35%, var(--color-none) 41%),
+              linear-gradient(90deg, var(--color-grey) 35%, var(--color-none) 41%);
           }
 
           &:increment:start,
