--- a/src/scss/ui-kit/_text.scss
+++ b/src/scss/ui-kit/_text.scss
@@ -61,8 +61,8 @@
 
   @include getMedia {
     @for $i from 5 through 25 {
-      &-#{calc(2 * $i)} {
-        font-size: var(--text-#{calc(2 * $i)});
+      &-#{calc($i * 2)} {
+        font-size: var(--text-#{calc($i * 2)});
       }
     }
   }
@@ -86,6 +86,6 @@ $value in $font-family {
 // Межстрочный интервал
 @for $i from 1 to 10 {
   .lh-#{$i} {
-    line-height: #{calc(1 + ($i / 10))};
+    line-height: #{calc(($i / 10) + 1)};
   }
 }
