--- a/src/scss/ui-kit/_form.scss
+++ b/src/scss/ui-kit/_form.scss
@@ -49,11 +49,10 @@
     position        : absolute;
     left            : 0;
     right           : 0;
-    bottom          : -16px;
-    height          : 16px;
-    font-size       : var(--text-12);
+    bottom          : -22px;
+    height          : 22px;
+    font-size       : var(--text-16);
     color           : var(--color-white);
-    background-color: var(--color-red);
-    border-radius   : 4px;
+    background-color: var(--color-blue-60);
   }
 }
