--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,49 +1,26 @@
-  <!-- Ограничение -->
-
-  <!-- <div class="limit flex align-center justify-center bg-block fixed zi-10 fade-0 hidden pointer-all w-100 h-100 linear duration-8" data-limit>
-    <div class="limit__content flex flex-column align-center justify-center bg-white shadow-box radius-4 w-100 p-10">
-      <h4 class="text-center text-18 text-md-20 bold-6 border-bottom w-100 mb-3 pb-3">Вам уже исполнилось 18 лет?</h4>
-      <p class="text-center text-14 text-md-16 bold-4 lh-5 border-bottom w-100 mb-5 pb-3 mb-md-10">
-        Содержание сайта предназначено для просмотра исключительно лицам достигшим совершеннолетия <br>
-        Если вам нет 18 лет, немедленно покиньте сайт!
-      </p>
-      <div class="flex flex-wrap align-center justify-center gap-5 w-100">
-        <button class="btn btn--second btn--lg btn--fill px-10" data-limit-positive data-waved="dark">Да</button>
-        <button class="btn btn--primary btn--lg btn--fill px-10" data-limit-negative data-waved="light">Нет</button>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- Карта -->
-
-  <!-- <section class="map container container--distance relative bg-grey overflow-hidden">
-    <div class="loader">
-      <span class="loader-progress">
-        <svg class="loader-icon icon">
-          <use xlink:href="img/icons.svg#loader">
-        </svg>
-      </span>
-    </div>
-    <div class="bg-block" id="map"></div>
-  </section> -->
-    
   <!-- Подвал -->
     
-  <!-- <footer class="footer container flex flex-wrap align-center justify-between gap-4 color-second bg-black pt-4 pb-10 pb-md-4" data-theme="light" id="footer">
-    <a class="logo btn mr-5" href="/">
-      <picture>
-        <source srcset="img/pictures/logo.webp" type="image/webp">
-        <img class="w-100" src="img/pictures/logo.png" alt="">
-      </picture>
+  <footer class="footer container flex flex-wrap align-center justify-between gap-5 bg-primary pt-5 pb-10 pb-md-5" id="footer">
+    <a class="logo btn btn--white" data-waved="dark" href="/">
+      <img class="w-100" src="img/pictures/logo.svg" alt="">
     </a>
-    <address class="color-white text-center text-16 lh-3">
-      ​Рождественская набережная, <br> 45/1​5 офис; 3 этаж
-    </address>
-    <span class="link text-18 w-max" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-politics.html">Privacy policy</span>
-    <span class="text-18">
-      Разработка: <a class="text-underline w-max" href="https://stdkit.ru/" target="_blank">Студия КИТ</a>
-    </span>
-  </footer> -->
+    <a class="btn btn--white link text-18 text-md-20 text-lg-22 bold-4 lh-1 p-1" data-waved="dark" href="mailto: info@energelica.ru">info@energelica.ru</a>
+    <div class="flex align-center">
+      <div class="flex align-center gap-2 mr-3 mr-md-6">
+        <a class="footer__btn btn btn--black btn--fill radius-2" data-waved="light" href="" target="_blank">
+          <svg class="icon">
+            <use xlink:href="img/icons.svg#wa">
+          </svg>
+        </a>
+        <a class="footer__btn btn btn--black btn--fill radius-2" data-waved="light" href="" target="_blank">
+          <svg class="icon">
+            <use xlink:href="img/icons.svg#tg">
+          </svg>
+        </a>
+      </div>
+      <a class="btn btn--white link font-alt text-22 bold-7 p-1" data-waved="dark" href="tel: 8 918 323 11 22">8 918 323 11 22</a>
+    </div>
+  </footer>
 
 </body>
 </html>
