--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -88,20 +88,207 @@
     }
 
     &__content {
-      max-width: 460px;
+      max-width: 510px;
     }
   }
 
   @media(max-width: $md) {
+    &__pack {
+      max-width: 550px;
+    }
+
+    &__content {
+      max-width: 400px;
+    }
+  }
+
+  @media(max-width: $sm) {
     &__bg {
-      position: static;
+      position     : static;
+      margin-inline: -15px;
     }
 
     &__pack,
     &__content {
       max-width: 100%;
     }
+
+    &__content {
+      margin-top: -70px;
+    }
   }
 }
 
 // Услуги
+.services {
+  &__pack {
+    &::before {
+      padding-top: 90%;
+    }
+  }
+}
+
+// Преимущества
+.advantages {
+  &__card {
+    max-width: 350px;
+  }
+
+  @media(min-width: $lg) {
+    &__items {
+      gap: 56px;
+    }
+  }
+
+  @media(max-width: $lg) {
+    &__card {
+      max-width: 300px;
+    }
+  }
+
+  @media(max-width: $md) {
+    &__card {
+      max-width: 100%;
+    }
+  }
+}
+
+// Подход
+.approach {
+  &__pack {
+    max-width: 1330px;
+  }
+
+  &__content {
+    max-width: 700px;
+  }
+
+  &__blur {
+    right: -210px;
+  }
+
+  @media(min-width: $lg) {
+    &__content {
+      padding: 60px;
+    }
+  }
+
+  @media(max-width: $lg) {
+    &__pack {
+      max-width: 700px;
+    }
+
+    &__content {
+      max-width: 510px;
+    }
+  }
+
+  @media(max-width: $md) {
+    &__pack {
+      max-width: 550px;
+    }
+
+    &__content {
+      max-width: 500px;
+    }
+  }
+
+  @media(max-width: $sm) {
+    &__bg {
+      position     : static;
+      margin-inline: -15px;
+    }
+
+    &__pack,
+    &__content {
+      max-width: 100%;
+    }
+
+    &__content {
+      margin-top: -70px;
+    }
+  }
+}
+
+// Мероприятия
+.events {
+  &__pack {
+    filter: grayscale(100%);
+  }
+
+  @media(hover) {
+    &__pack:hover {
+      filter: grayscale(0);
+    }
+  }
+
+  @media(max-width: $md) {
+    &-slide.swiper-slide-active &__pack {
+      filter: grayscale(0);
+    }
+  }
+}
+
+// Рассчет
+.calculation {
+  &__blur {
+    left: 30%;
+  }
+}
+
+// Обратная связь
+.feedback {
+  &__pack {
+    max-width: 875px;
+  }
+
+  &__content {
+    max-width: 725px;
+  }
+
+  &__blur {
+    left: -210px;
+  }
+
+  @media(min-width: $lg) {
+    &__content {
+      padding: 60px 64px;
+    }
+  }
+
+  @media(max-width: $lg) {
+    &__pack {
+      max-width: 700px;
+    }
+
+    &__content {
+      max-width: 540px;
+    }
+  }
+
+  @media(max-width: $md) {
+    &__pack {
+      max-width: 500px;
+    }
+
+    &__content {
+      max-width: 400px;
+    }
+  }
+
+  @media(max-width: $sm) {
+    &__bg {
+      position     : static;
+      margin-inline: -15px;
+    }
+
+    &__pack,
+    &__content {
+      max-width: 100%;
+    }
+
+    &__content {
+      margin-top: -100px;
+    }
+  }
+}
