--- a/src/scss/ui-kit/_custom.scss
+++ b/src/scss/ui-kit/_custom.scss
@@ -1,8 +1,3 @@
-// Air-datepicker
-.air-datepicker-global-container {
-  z-index: 1100;
-}
-
 // Fancybox
 .fancybox {
   &__spinner {
@@ -49,10 +44,16 @@
     position       : static;
 
     &-bullet {
-      width           : 12px;
-      height          : 12px;
+      width           : 8px;
+      height          : 8px;
+      margin-inline   : 10px !important;
+      opacity         : 0.1;
       background-color: currentColor;
       transition      : background-color 0.2s ease;
+
+      &-active {
+        opacity: 1;
+      }
     }
   }
 
@@ -67,19 +68,29 @@
 
     &-prev:not(.default),
     &-next:not(.default) {
-      width        : 50px;
-      height       : 50px;
+      width        : 52px;
+      height       : 52px;
       position     : absolute;
       border-radius: 50%;
     }
 
     @media(min-width: $md) {
       &-prev:not(.default) {
-        left: -25px;
+        left: -40px;
       }
 
       &-next:not(.default) {
-        right: -25px;
+        right: -40px;
+      }
+    }
+
+    @media(min-width: $lg) {
+      &-prev:not(.default) {
+        left: -77px;
+      }
+
+      &-next:not(.default) {
+        right: -77px;
       }
     }
   }
