--- a/src/scss/ui-kit/_dialog.scss
+++ b/src/scss/ui-kit/_dialog.scss
@@ -1,7 +1,7 @@
 // Модальное окно
 .dialog {
-  color           : var(--color-black);
-  background-color: var(--color-white);
+  color           : var(--color-white);
+  background-color: var(--color-primary);
   max-width       : 100%;
 
   &--sm {
