--- a/src/scss/ui-kit/_reset.scss
+++ b/src/scss/ui-kit/_reset.scss
@@ -52,13 +52,6 @@ img {
   }
 }
 
-dialog {
-  position: static;
-  width   : auto;
-  height  : auto;
-  border  : none;
-}
-
 address {
   font-style: normal;
 }
@@ -78,7 +71,7 @@ textarea,
 select {
   outline         : none;
   border          : none;
-  color           : var(--color-black);
+  color           : var(--color-white);
   background-color: var(--color-none);
 
   &:-webkit-autofill {
@@ -86,9 +79,9 @@ select {
     &,
     &:hover,
     &:focus {
-      -webkit-text-fill-color: var(--color-black);
-      box-shadow             : inset 0 0 0 1000px var(--color-white);
-      border                 : 1px solid var(--color-grey);
+      -webkit-text-fill-color: var(--color-white);
+      box-shadow             : inset 0 0 0 1000px var(--color-none);
+      border-bottom          : 1px solid var(--color-white);
       transition             : background-color 5000s ease-in-out 0s;
     }
   }
@@ -104,36 +97,4 @@ input[type="checkbox"],
 input[type="radio"],
 input[type="range"] {
   appearance: none;
-}
-
-input[type="range"] {
-  &::-webkit-slider-thumb {
-    appearance    : none;
-    border        : none;
-    background    : none;
-    pointer-events: all;
-    width         : var(--bubble-size);
-    height        : var(--bubble-size);
-    cursor        : ew-resize;
-  }
-
-  &::-moz-range-thumb {
-    appearance    : none;
-    border        : none;
-    background    : none;
-    pointer-events: all;
-    width         : var(--bubble-size);
-    height        : var(--bubble-size);
-    cursor        : ew-resize;
-  }
-
-  &::-ms-thumb {
-    appearance    : none;
-    border        : none;
-    background    : none;
-    pointer-events: all;
-    width         : var(--bubble-size);
-    height        : var(--bubble-size);
-    cursor        : ew-resize;
-  }
 }
