--- a/src/scss/ui-kit/_scrollbar.scss
+++ b/src/scss/ui-kit/_scrollbar.scss
@@ -2,7 +2,7 @@
 * {
   scrollbar: {
     width: thin;
-    color: var(--color-primary) var(--color-grey);
+    color: var(--color-grey) var(--color-primary);
   }
 
   &::-webkit-scrollbar {
@@ -10,7 +10,7 @@
       width: 16px;
 
       &-track {
-        background-color: var(--color-grey);
+        background-color: var(--color-primary);
 
         &-piece {
           margin-block: 8px;
@@ -18,74 +18,22 @@
       }
 
       &-thumb {
-        background-color: var(--color-primary);
+        background-color: var(--color-grey);
 
         border: {
           width : 4px;
           style : solid;
-          color : var(--color-grey);
+          color : var(--color-primary);
           radius: 8px;
         }
 
         &:active {
           box-shadow: inset 0 8px 8px var(--color-black-50);
         }
-
       }
 
       &-corner {
-        background-color: var(--color-grey);
-      }
-
-      &-button {
         background-color: var(--color-primary);
-
-        &:vertical {
-          &:decrement:start {
-            background-image: linear-gradient(120deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(240deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(0deg, var(--color-grey) 35%, var(--color-none) 41%);
-          }
-
-          &:increment:end {
-            background-image: linear-gradient(300deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(60deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(180deg, var(--color-grey) 35%, var(--color-none) 41%);
-          }
-
-          &:increment:start,
-          &:decrement:end {
-            display: none;
-          }
-        }
-
-        &:horizontal {
-          &:decrement:start {
-            background-image: linear-gradient(30deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(150deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(-90deg, var(--color-grey) 35%, var(--color-none) 41%);
-          }
-
-          &:increment:end {
-            background-image: linear-gradient(210deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(330deg, var(--color-grey) 35%, var(--color-none) 41%),
-              linear-gradient(90deg, var(--color-grey) 35%, var(--color-none) 41%);
-          }
-
-          &:increment:start,
-          &:decrement:end {
-            display: none;
-          }
-        }
-      }
-    }
-
-    @media(hover) {
-
-      &-thumb:hover,
-      &-button:vertical:hover,
-      &-button:horizontal:hover {
-        background-color: var(--color-primary-dark);
       }
     }
   }
