--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -40,7 +40,7 @@
 
   <!-- Мобильное меню -->
 
-  <section class="mobile fixed zi-6 w-100 h-100 ease duration-1" data-mobile="hidden" data-theme="light">
+  <section class="mobile fixed zi-6 w-100 h-100 ease duration-1" data-mobile="hidden">
     <div class="mobile__content flex flex-column bg-primary overflow-auto w-100 h-100 ml-auto ease duration-3">
       <div class="flex align-center justify-between gap-2 relative p-4">
         <a class="logo btn btn--white d-md-none mr-5" data-waved="dark" href="/">
