--- a/src/scss/ui-kit/_custom.scss
+++ b/src/scss/ui-kit/_custom.scss
@@ -1,8 +1,22 @@
+// Air-datepicker
+.air-datepicker-global-container {
+  z-index: 1100;
+}
+
 // Fancybox
 .fancybox {
   &__spinner {
     width : auto;
     height: auto;
+  }
+
+  &__container * {
+
+    &,
+    &::before,
+    &::after {
+      box-sizing: border-box;
+    }
   }
 
   &__content {
