--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -32,6 +32,7 @@
 @import "./ui-kit/pointer";
 @import "./ui-kit/margin";
 @import "./ui-kit/padding";
+@import "./ui-kit/border";
 @import "./ui-kit/radius";
 @import "./ui-kit/position";
 @import "./ui-kit/width";
