--- a/src/scss/ui-kit/_switch.scss
+++ b/src/scss/ui-kit/_switch.scss
@@ -39,17 +39,18 @@
   }
 
   &--radio {
-    min-width    : 20px;
-    width        : 20px;
-    height       : 20px;
+    min-width    : 22px;
+    width        : 22px;
+    height       : 22px;
     border-radius: 50%;
+    background   : linear-gradient(180deg, var(--color-none) 18.23%, var(--color-black-10) 100%), var(--color-white-10);
 
     &::after {
       content         : "";
       display         : block;
       width           : 12px;
       height          : 12px;
-      background-color: currentColor;
+      background-color: var(--color-black);
       border-radius   : inherit;
       transform       : scale(0);
       transition      : opacity 0.1s linear, transform 0.1s linear;
@@ -57,6 +58,10 @@
     }
 
     &:checked {
+      & {
+        background-color: var(--color-white);
+      }
+
       &::after {
         opacity  : 1;
         transform: scale(1);
@@ -83,14 +88,14 @@
     &:not(:checked)::after {
       left            : 4px;
       right           : 50px;
-      background-color: var(--color-grey);
+      background-color: currentColor;
       transition      : left 0.5s ease, right 0.4s ease 0.2s;
     }
 
     &:checked::after {
       left            : 50px;
       right           : 4px;
-      background-color: currentColor;
+      background-color: var(--color-grey);
       transition      : left 0.4s ease 0.2s, right 0.5s ease, background-color 0.35s ease -0.1s;
     }
   }
