--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -1,12 +1,33 @@
+.smooth-wrapper {
+  padding: inherit;
+}
+
+.preloader {
+  position: fixed;
+  inset: 0;
+  z-index: 325;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--color-black);
+  transition: .5s ease;
+}
+
+body.load-complete .preloader {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 // Главный блок
 .main {
   min-height: 940px;
 
   &__bg {
     &::after {
-      content         : "";
-      position        : absolute;
-      inset           : 0;
+      content: "";
+      position: absolute;
+      inset: 0;
       background-image: linear-gradient(to top, var(--color-black) 20%, var(--color-none) 80%);
     }
   }
@@ -15,15 +36,15 @@
     z-index: 1;
 
     &::before {
-      content         : "";
-      position        : absolute;
-      left            : 0;
-      bottom          : 8px;
-      right           : 0;
-      width           : 100%;
-      height          : 12px;
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 8px;
+      right: 0;
+      width: 100%;
+      height: 12px;
       background-color: var(--color-blue-40);
-      z-index         : -1;
+      z-index: -1;
     }
   }
 
@@ -52,7 +73,7 @@
 
   @media(max-width: $sm) {
     & {
-      min-height     : 630px;
+      min-height: 630px;
       justify-content: flex-end;
     }
 
@@ -104,7 +125,7 @@
 
   @media(max-width: $sm) {
     &__bg {
-      position     : static;
+      position: static;
       margin-inline: -15px;
     }
 
@@ -195,7 +216,7 @@
 
   @media(max-width: $sm) {
     &__bg {
-      position     : static;
+      position: static;
       margin-inline: -15px;
     }
 
@@ -278,7 +299,7 @@
 
   @media(max-width: $sm) {
     &__bg {
-      position     : static;
+      position: static;
       margin-inline: -15px;
     }
 
@@ -298,7 +319,7 @@
   &-slider {
     &[data-quiz="stop"] .swiper-button-next {
       pointer-events: none;
-      opacity       : 0.5;
+      opacity: 0.5;
     }
 
     &[data-quiz-end] &__btn--next {
@@ -310,16 +331,16 @@
     }
 
     &__btn {
-      top  : 0;
-      left : 0;
+      top: 0;
+      left: 0;
       right: 0;
 
       &--prev {
         min-width: 60px;
-        width    : 60px;
+        width: 60px;
 
         &.swiper-button-disabled {
-          color           : var(--color-white);
+          color: var(--color-white);
           background-color: var(--color-white-40);
         }
       }
