--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -16,9 +16,13 @@
   <title><%= data.title %></title>
 </head>
 <body>
+
+  <!-- Прелоадер -->
+
   <div class="preloader">
     <img  src="img/pictures/logo.svg" alt="">
   </div>
+  
   <!-- Шапка документа -->
 
   <header class="header container flex align-center justify-between gap-10 fixed zi-3 py-4 linear duration-3" data-header>
