--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,6 +1,6 @@
   <!-- Подвал -->
 
-  <footer class="footer container flex flex-wrap align-center justify-between gap-5 bg-primary pt-5 pb-10 pb-md-5" id="footer">
+  <!-- <footer class="footer container flex flex-wrap align-center justify-between gap-5 bg-primary pt-5 pb-10 pb-md-5" id="footer">
     <a class="logo btn btn--white" data-waved="dark" href="/">
       <img class="w-100" src="img/pictures/logo.svg" alt="">
     </a>
@@ -20,7 +20,8 @@
       </div>
       <a class="btn btn--white link font-alt text-22 bold-7 p-1" data-waved="dark" href="tel: 8 918 323 11 22">8 918 323 11 22</a>
     </div>
-  </footer>
+  </footer> -->
+
   </div>
   </div>
   </body>
