--- a/src/scss/ui-kit/_button-swipe.scss
+++ b/src/scss/ui-kit/_button-swipe.scss
@@ -15,7 +15,7 @@
 
   @media(hover) {
     &:hover {
-      color           : var(--color-black);
+      color           : var(--btn-accent);
       background-color: var(--color-none);
 
       &::before {
