--- a/src/scss/ui-kit/_reset.scss
+++ b/src/scss/ui-kit/_reset.scss
@@ -71,7 +71,7 @@ textarea,
 select {
   outline         : none;
   border          : none;
-  color           : var(--color-white);
+  color           : var(--color-black);
   background-color: var(--color-none);
 
   &:-webkit-autofill {
