--- a/src/scss/ui-kit/_variables.scss
+++ b/src/scss/ui-kit/_variables.scss
@@ -1,11 +1,11 @@
 // Цвета
 $colors: ("none": rgba(0, 0, 0, 0),
-  "primary": #1D1D1D,
+  "primary": #0E1F2C,
   "second": #8F5251,
   "black": #151515,
   "white": #FFFFFF,
   "grey": #EFEFEF,
-  "blue": #6181C2);
+  "blue": #00467B);
 
 // Шрифты
 $font-family: ("alt": "Gilroy",
