--- a/src/scss/ui-kit/_card.scss
+++ b/src/scss/ui-kit/_card.scss
@@ -3,7 +3,7 @@
   display         : flex;
   flex-direction  : column;
   position        : relative;
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
   transition      : transform 0.2s ease;
   overflow        : hidden;
 
